<resources>
    <string name="app_name">Marketplace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrance">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="program_conditions">Нажимая кнопку “Войти”, Вы принимаете\n<u>условия программы лояльности</u></string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="number_phone">Номер телефона</string>
    <string name="error_signIn">Ошибка авторизации</string>
    <string name="field_cannot_empty">Поле не может быть пустым</string>
    <string name="field_have_2_chars">Поле должно содержать минимум 2 символа</string>
    <string name="check_right_input_number">Проверьте правильность введеного номера</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="bag">Корзина</string>
    <string name="discount">Акции</string>
    <string name="profile">Профиль</string>
    <string name="sorted_popular">По популярности</string>
    <string name="filters">Фильтры</string>
    <string name="show_all">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="tan">Загар</string>
    <string name="mask">Маска</string>
    <string name="sorted_price_desc">По убыванию цены</string>
    <string name="sorted_price_asc">По возрастанию цены</string>
    <string name="lk">Личный кабинет</string>
    <string name="favorite">Избранное</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="offer">Оферта</string>
    <string name="refund">Возврат товара</string>
    <string name="exit">Выйти</string>
    <string name="products">Товары</string>
    <string name="brends">Бренды</string>
    <string name="descr">Описание</string>
    <string name="hide">Скрыть</string>
    <string name="more">Подробнее</string>
    <string name="characteristics">Характеристики</string>
    <string name="composition">Состав</string>
    <string name="add_bag">Добавить корзину</string>
</resources>