<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.screens.tabs.catalog.CatalogFragment">

        <TextView
            android:id="@+id/tv_catalog"
            style="@style/title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catalog"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btn_choice_sorted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_catalog">

            <ImageView
                android:src="@drawable/ic_arrows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tv_sorted"
                style="@style/title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorted_popular"
                app:drawableEndCompat="@drawable/ic_short_arrow_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_choice_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_catalog">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filters" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tv_filter"
                style="@style/title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:paddingHorizontal="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choice_sorted">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_show_all"
                    style="@style/app_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/show_all"
                    app:closeIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_face"
                    style="@style/app_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_body"
                    style="@style/app_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_tan"
                    style="@style/app_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mask"
                    style="@style/app_chip_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mask" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:clipToPadding="false"
            android:visibility="gone"
            android:layout_marginHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_product"
            app:spanCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="200dp"
            android:indeterminateTint="@color/element_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>