<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screens.tabs.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_catalog"
        style="@style/title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lk"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_catalog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_menu_account" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_surname"
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Марина Иванова" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp" />

                <TextView
                    android:id="@+id/tv_number_phone"
                    style="@style/caption_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_grey"
                    tools:text="+ 7 993 877 44 02" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_quit" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/btn_open_favorite"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_heart_stroke"
                app:tint="@color/element_pink" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="6dp" />

                <TextView
                    android:id="@+id/tv_count_favorite"
                    style="@style/caption_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_grey"
                    tools:text="1 товар" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_short_arrow_down"
                android:rotation="-90" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_shop"
                app:tint="@color/element_pink" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_short_arrow_down"
                android:rotation="-90" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_feedback"
                app:tint="@color/text_orange" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_short_arrow_down"
                android:rotation="-90" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_offer"
                app:tint="@color/text_grey" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/offer" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_short_arrow_down"
                android:rotation="-90" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_profile_item"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="7dp">

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_refund"
                app:tint="@color/text_grey" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refund" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_short_arrow_down"
                android:rotation="-90" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_exit"
        style="@style/button_text_2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_profile_item"
        android:gravity="center"
        android:text="@string/exit"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>